design: fix radio input alignment

--- a/assets/css/_questions.scss
+++ b/assets/css/_questions.scss
@@ -48,6 +48,6 @@
 	}
 
 	p {
-		margin: 0.4em 0 1em 32px;
+		margin: 0.4em 0 1em 24px;
 	}
 }
